--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                
             </div>
         </div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">to top</button>
     </div>
 
 
